# magic_mirror

./: Cargo.toml  LICENSE  README.md
src/: main.rs  misc.rs  request_weather.rs  rpi.rs  ui.rs
src/misc/: errors.rs  structs.rs
src/request_weather/: get_weather.rs
src/rpi/: rpi-x11.rs.old  rpi.rs  rpi.rs.old  rpi.rs.old2  rpi.rs.old3  wakeup.rs
src/ui/: gui.rs  gui.rs.old
