[package]
name = "magic_mirror"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
strip = true

[profile.release]
opt-level = 3
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true

[dependencies]
reqwest = { version = "0.11.*", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
chrono = { version = "0.4.*", features = ["clock"] }
iced = { version = "0.9.0", features = ["image", "debug", "tokio", "svg"] }
iced_native = { version = "0.10.3" }
iced_winit = { version = "0.9.1" }
iced_futures = { version = "0.6.0" }
rand = { version = "0.8.5" }

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = { version = "0.14.1" }
enigo = { version = "0.1.2" }
x11rb = { version = "0.12.0", features = ["dpms"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = { version = "0.14.1" }
enigo = { version = "0.1.2" }
x11rb = { version = "0.12.0", features = ["dpms"]}
